--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,7 +5,7 @@ plugins {
 group 'hohserg'
 version '1.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
